[project]
name = "models"
version = "0.1.0"
description = ""
authors = [
    {name = "glenn@thorn.org"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib (>=1.4.2,<2.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pytorch-lightning (>=2.5.0.post0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "peft (>=0.15.0,<0.16.0)",
    "geos (>=0.2.3,<0.3.0)",
    "reverse-geocoder (>=1.5.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
